Enhance README with project details and setup guide
Added detailed project description, features, technologies, and setup instructions.